--- a/index.css
+++ b/index.css
@@ -140,9 +140,10 @@
     }
     #container{
         background-color: #fff;
+        justify-content: flex-start;
     }
     #main-content{
-        height:90vh;
+       max-height:90vh;
         width:100%;
         border-radius: 0px;
     }
@@ -158,9 +159,6 @@
     }
     #main-content{
         justify-content: space-around;
-    }
-    #main-content{
-        padding-top:20px;
     }
     .content img{
         width:30%;
